* Fix bug with non-regexp Find in Files searches * Move Find/Replace UI into a template (must use a hack to hide linebreaks from the browser though, since whitespace changes the spacing between neighboring inline elements). * Force Tab/Shift+Tab to cycle between the two fields in Replace bar, instead of closing it. Tab behavior unchanged (vs. master) in Find & Find in Files bars. * If Replace bar wraps due to very narrow window, break only at the gap between the Find UI & Replace UI.

--- a/src/styles/brackets.less
+++ b/src/styles/brackets.less
@@ -1084,6 +1084,11 @@ a, img {
         }
     }
     
+    #find-group, #replace-group {
+        display: inline-block;
+        white-space: nowrap;
+    }
+    
     .message, .no-results-message {
         display: inline-block;
     }
